--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,12 @@
 * {
   transition: background-color 0.3s, color 0.3s, filter 0.3s ease;
 }
+
+/* Hide scrollbars in horizontal snap */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
